Remaining Syntax highlighting

--- a/BookReviews/_posts/2021-07-21-Dune.md
+++ b/BookReviews/_posts/2021-07-21-Dune.md
@@ -5,7 +5,7 @@ author: James Clancy
 tags: books sci-fi
 ---
 
-# A classic, but slow to start - 8.5/10
+## A classic, but slow to start - 8.5/10
 
 I have tried to read *Dune* in the past and have never been able to get past the first couple chapters. 
 I finally pushed through the start and made it through the book. Overall, the book is a classic. It tells an 
