--- a/BookReviews/_posts/2021-07-28-HGTG.md
+++ b/BookReviews/_posts/2021-07-28-HGTG.md
@@ -5,7 +5,7 @@ author: James Clancy
 tags: books sci-fi
 ---
 
-# 7.5/10 as an adult, 10/10 as a child
+## 7.5/10 as an adult, 10/10 as a child
 
 As a child, I really like Hitchhikers Guid to the Galaxy. I recently reread the first four books and found them not living up to my past expectations. The books are humorous but much of the books stems from the absurdity of the situations, this is alright in first book but as the books progress the levels of absurdity appear to be cranked up further and further until you reach *So Long and Thanks for All the Fish* which was a little painful to read. 
 
