--- a/BookReviews/_posts/2021-07-31-Deviate.md
+++ b/BookReviews/_posts/2021-07-31-Deviate.md
@@ -5,7 +5,7 @@ author: James Clancy
 tags: books science
 ---
 
-# Some interesting points but not for me - 6/10
+## Some interesting points but not for me - 6/10
 
 Let me start by saying I generally don't read books along the lines of *Deviate* by Beau Lotto. The book was available at my local Habitat for Humanity and appeared to be on an interesting topic so I picked it up. 
 
