review of life - added biology tag

--- a/BookReviews/_posts/2021-08-23-Life.md
+++ b/BookReviews/_posts/2021-08-23-Life.md
@@ -2,7 +2,7 @@
 layout: post
 title: Life A Natural History of the First Four Billion Years of Life on Earth by Richard Fortey
 author: James Clancy
-tags: books science
+tags: books science biology
 ---
 
 ## Thought the beginning was a bit of a bore but enjoyed the later parts of the history - 7/10
