Make it so author fix

--- a/BookReviews/_posts/2021-09-25-MakeItSo.md
+++ b/BookReviews/_posts/2021-09-25-MakeItSo.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: Make It So - Leadership Lessons from Star Trek - The Next Generation by Jeff Sutherland
+title: Make It So - Leadership Lessons from Star Trek - The Next Generation by Wes Roberts and Bill Ross
 author: James Clancy
 tags: books business sci-fi star-trek
 ---
