Make it so formating fix

--- a/BookReviews/_posts/2021-09-25-MakeItSo.md
+++ b/BookReviews/_posts/2021-09-25-MakeItSo.md
@@ -15,4 +15,4 @@ This was a very easy read and felt that the summaries of the TNG episode inspire
 
 Generally, it reads like someone set out with a list of leadership qualities and tried there best to find episodes which illustrated them. I think this makes a lot of sense from a formulaic book standpoint but it is not idea. 
 
-Overall, I will be watching out for other "pop-business" books and "pop-philosophy" books at BookThing the next time I go. I wouldn't pay for the book but for free it is worth the time to read. 
+Overall, I will be watching out for other "pop-business" books and "pop-philosophy" books at [BookThing](https://bookthing.org/) the next time I go. I wouldn't pay for the book but for free it is worth the time to read. 
