--- a/BookReviews/_posts/2022-02-20-Congo.md
+++ b/BookReviews/_posts/2022-02-20-Congo.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: Practical Process Automation by Bernd Ruecker
+title: Congo by Micheal Crichton
 author: James Clancy
-tags: books sagas tech microservices
+tags: books sci-fi thriller
 ---
 
-## Very Salesy but Overall I thought it was a good explanation of Sagas and Orchestration and Chorography- 7.5/10
+## Actually pretty good and entertaining 8/10
 
-_Collapse_ walks through the events leading up to and contributing factors of various societies' collapses from the Maya to Easter Island to the recent Rwandan genocide. It then compares those situations to modern situations in places like Montana, Australia and China. Similar to _Guns, Germs and Steel_, Diamond attempts to explain the political and scientific factors in an engaging and approachable way meant for all audiences. 
+_Congo_ is a novel about a diamonds companies expedition to investigate a scouting team which went missing in the jungles of the Congo. The book features is the "techno-thriller" which is written like it was based on real events and is from the same author as Jurassic Park.
 
-I enjoyed reading _Collapse_ and while I feel as though I learned much throughout teh book I feel that some of its subject matter could be considered preachy and turn off some readers. I agree with much of what Jared said but definitely think some of the narrative discussed in relation to modern climate change could be outputting to many. I therefore only recommend the book for people with an interest in the general green movement, for those who are not interested or otherwise not convinced of climate change I do not think this book presents a comprehensive enough argument to change anyone's opinion and strikes a tone that some may find offensive.
+There was a film made based on this book and it was supposedly quite bad, it won a number of Golden Raspberry Awards. I decided to read the book despite the films reputation as I like _Jurassic Park_. I was pleasantly surprised by the book, it was a great, exciting story and while a little far fetched did seem to be well researched and a  good amount of effort spent to make it "realistic".
